infra-service/k8s/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-depl
    labels:
        app: auth
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth
    template:
        metadata:
            labels:
                app: auth
        spec:
            containers:
                - name: auth
                  image: leavend/auth-service
                  ports:
                      - containerPort: 2001
