infra-service/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    ingressClassName: nginx
    rules:
        - host: tpb.local
          http:
              paths:
                  - path: /api/v1/users/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: auth-srv
                            port:
                                number: 2001
                  - path: /api/v1/roles/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: auth-srv
                            port:
                                number: 2001
        - host: rabbitmq-manager.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: rabbitmq
                            port:
                                number: 15672
